--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>JS-CLOCK</h1>
     <div class="clock">
         <div class="clock-face">
             <div class="hand hour-hand"></div>
